<resources>
    <string name="app_name">First Response</string>
    <string name="submit">Login</string>
    <string name="incidents">Incidents</string>
    <string name="home_responding">Responding</string>
    <string name="sign_up">Sign up</string>
    <string name="announcement">Announcements</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="responding">Responding</string>
    <string name="events">Events</string>
    <string name="first_responder">First Responder</string>
    <string name="defaultmsg">defaultMsg</string>
    <string name="loginFailMsg">Invalid Username or Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="emtpyDbMsg">user entry from db is emtpy</string>
    <string name="confirm">Confirm</string>
    <string name="new_announ_log_msg">Empty announcement title/description</string>
    <string name="chat">Chat</string>
    <string name="announcements">Announcements</string>
    <string name="user_avatar">User Avatar</string>
    <string name="incident">Incident</string>
    <string name="scene">Scene</string>
    <string name="unavailable">Unavailable</string>
    <string name="station">Station</string>
    <string name="eta_label">ETA:&#160;</string>
    <string name="event_title_description_is_empty">Please fill out all the fields</string>
    <string name="type_of_call">Type of Call:&#160;</string>
    <string name="responding_label">Responding:&#160;</string>
    <string name="received_label">Received Time:&#160;</string>
    <string name="units_label">Units:&#160;</string>
    <string name="hyphen">-</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="create">Create</string>
    <string name="user_account">User Account</string>
    <string name="view_all">View All</string>
    <string name="no_responders">No Responders</string>
    <string name="no_active_incidents">No Active Incidents</string>
    <string name="preferences">Preferences</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_date">Event Date</string>
    <string name="mm_dd_yy">MM/DD/YYYY</string>
    <string name="hh_mm">HH:MM</string>
    <string name="event_time">Event Time</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="event">Event</string>
    <string name="location">Location</string>
    <string name="participants">Participants:</string>
    <string name="location_header">Location:</string>
    <string name="no_announcements">No Announcements</string>
    <string name="no_events">No Events</string>
    <string name="no_participants">No Participants</string>
    <string name="send_message">Send Message</string>
    <string name="user_image">User Image</string>
    <string name="rank">Rank</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="choose_profile_image">Choose profile image</string>
    <string name="take_profile_image">Take Profile Image</string>
    <string name="submit_changes">Submit changes</string>
    <string name="edit_user">Edit user</string>
    <string name="google_maps">Google Maps</string>
    <string name="file_report">File Report</string>
    <string name="units">Units</string>
    <string name="box">Box #</string>
    <string name="incident_type">Incident Type</string>
    <string name="officer_report">Officer Report</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_a_department">Create a department</string>
    <string name="no_reports_filed">No Reports Filed</string>
    <string name="reports">Reports</string>
    <string name="created_by">Created by:&#160;</string>
    <string name="time">Time:</string>
    <string name="duration">Duration:</string>
    <string name="duration_minutes">Duration (Minutes):</string>
    <string name="edit_group">Edit group</string>
    <string name="plus">+</string>
    <string name="leave_chat">Leave Chat</string>
    <string name="write_a_message">Write a message</string>
    <string name="responders">Responders</string>
    <string name="no_incidents">No Incidents</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="no_rank_available">No Rank available</string>
    <string name="edit_rank">Edit rank</string>
    <string name="no_user_available">No User Available</string>

    <!-- Strings related to login -->
</resources>