<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home_icon"
            android:menuCategory = "secondary"
            android:title="@string/home" />
        <item
            android:id="@+id/eventGroupFragment"
            android:icon="@drawable/event_icon"
            android:menuCategory = "secondary"
            android:title="@string/events" />
        <item
            android:id="@+id/chatGroupFragment"
            android:icon="@drawable/chat_icon"
            android:menuCategory = "secondary"
            android:title="@string/chat" />
        <item
            android:id="@+id/announcementFragment"
            android:icon="@drawable/announcement_icon"
            android:menuCategory = "secondary"
            android:title="@string/announcements" />

    </group>

    <group android:id="@+id/archive_group">
        <item
            android:id="@+id/incidentGroupFragment"
            android:icon="@drawable/ic_baseline_warning_24"
            android:menuCategory = "secondary"
            android:title="@string/incidents" />
        <item
            android:id="@+id/respondingFragment"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:menuCategory = "secondary"
            android:title="@string/responding" />
        <item
            android:id="@+id/reportGroupFragment"
            android:icon="@drawable/ic_baseline_edit_note_24"
            android:menuCategory = "secondary"
            android:title="@string/reports" />
    </group>

    <group android:id="@+id/adminMenuItems">
        <item
            android:id="@+id/searchUserFragment"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:menuCategory = "secondary"
            android:title="@string/edit_user" />

        <item
            android:id="@+id/adminEditGroupFragment"
            android:icon="@drawable/ic_baseline_edit_24"
            android:menuCategory = "secondary"
            android:title="@string/edit_group" />
    </group>

    <group android:id="@+id/preferences_group">
        <item
            android:id="@+id/preferencesFragment"
            android:icon="@drawable/preferences_icon"
            android:menuCategory = "secondary"
            android:title="@string/preferences"/>
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_baseline_logout_24"
            android:menuCategory = "secondary"
            android:title="@string/logout" />
    </group>

</menu>