<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EditUserFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.first_responder_app.viewModels.EditUserViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="189dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/userFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:autofillHints=""
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/userLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:autofillHints="name"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/userPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_from_side"
                            android:autofillHints="phone"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:textSize="18sp" />

                        <Spinner
                            android:id="@+id/userRank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_from_side"
                            android:contentDescription="@string/rank"
                            android:minHeight="48dp"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/userAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_from_side"
                            android:autofillHints="postalAddress"
                            android:hint="@string/address"
                            android:inputType="textPostalAddress"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/userEmailAddr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_from_side"
                            android:autofillHints="emailAddress"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />

                    </LinearLayout>
                </ScrollView>


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/uploadProfilePicBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_from_side"
                        android:clickable="true"
                        android:contentDescription="@string/choose_profile_image"
                        android:src="@android:drawable/ic_menu_gallery" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floatingActionButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_from_side"
                        android:clickable="true"
                        android:contentDescription="@string/take_profile_image"
                        android:src="@android:drawable/ic_menu_camera" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_from_side"
                        android:clickable="true"
                        android:contentDescription="@string/submit_changes"
                        android:src="@drawable/ic_send_black_24dp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageViewForProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="@dimen/margin_from_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@android:drawable/ic_menu_help"
                android:contentDescription="@string/user_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>