<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.IncidentFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.first_responder_app.viewModels.IncidentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incident"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/incident_responding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responding_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/incident_responding2" />

        <TextView
            android:id="@+id/incident_responding2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/incident_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/incident_address">

            <LinearLayout
                android:id="@+id/incident_button_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:onClick="respondingButtonClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/scene"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/button"
                    android:onClick="respondingButtonClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/unavailable"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/button3"
                    android:onClick="respondingButtonClicked"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/station"
                    android:textSize="11sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/incident_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/type_of_call"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <TextView
            android:id="@+id/incident_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/incident_type"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <TextView
            android:id="@+id/incident_received_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/received_label"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incident_type" />

        <TextView
            android:id="@+id/incident_received_time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/incident_received_time"
            app:layout_constraintTop_toBottomOf="@+id/incident_type" />

        <TextView
            android:id="@+id/incident_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/units_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incident_received_time" />

        <TextView
            android:id="@+id/incident_units2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/incident_units"
            app:layout_constraintTop_toBottomOf="@+id/incident_received_time" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incident_units" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/incident_eta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eta_label"
            app:layout_constraintBottom_toTopOf="@+id/mapView"
            app:layout_constraintEnd_toStartOf="@+id/incident_eta2"/>

        <TextView
            android:id="@+id/incident_eta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/hyphen"
            app:layout_constraintBottom_toTopOf="@+id/mapView"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>